Changes font oasam

--- a/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
+++ b/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
@@ -1,11 +1,12 @@
 ﻿    
 @{
-    ViewBag.Title = "Home Page";
+    
+ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <head>
-    <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />    
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />    
     <link href="~/Content/css/Site.css" rel="stylesheet" />
     <link href="~/Content/css/bootstrap-slider.min.css" rel="stylesheet" />
     <link href="~/Content/css/RangeSlidar.css" rel="stylesheet" />
