adding lodar and async call in data base.

--- a/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
+++ b/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
@@ -1,18 +1,18 @@
-﻿    
+﻿
 @{
-    
-ViewBag.Title = "Home Page";
+
+    ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <head>
-    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />    
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/css/Site.css" rel="stylesheet" />
     <link href="~/Content/css/bootstrap-slider.min.css" rel="stylesheet" />
     <link href="~/Content/css/RangeSlidar.css" rel="stylesheet" />
     <link href="~/Content/css/LutronLightFloor.css" rel="stylesheet" />
-    
     <link href="~/Content/css/bootstrap-toggle.min.css" rel="stylesheet" />
+    <link href="~/Content/css/Loader.css" rel="stylesheet" />
 </head>
 <html>
 
@@ -77,6 +77,7 @@ ViewBag.Title = "Home Page";
             </div>
         </div>
     </div>
+    <div class="loading displaynone" id="loader"></div>
 </body>
 
 </html>
@@ -87,5 +88,5 @@ ViewBag.Title = "Home Page";
 <script src="~/Scripts/bootstrap.min.js"></script>
 <script src="~/Scripts/jquery-confirm.js"></script>
 <script src="~/Scripts/bootstrap-toggle.min.js"></script>
-<script src="~/Content/Script/Pages/ObixBacNet.js"></script>
+<script src="~/Content/Script/Pages/BacNet.js"></script>
 
