--- a/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
+++ b/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
@@ -20,7 +20,7 @@
 <body>
     <div class="row">
         <div class="panel panel-default">
-            <div class="panel-heading"></div>
+            <div class="panel-heading"><h4>BacNetLutron</h4></div>
             <div class="panel-body">
                 <div class="col-sm-8">
                     <form>
@@ -28,7 +28,6 @@
                             <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Device</label>
                             <div class="col-sm-9">
                                 <select class="form-control" id="exampleFormControlSelect1">
-                                    <option selected>--Select Device--</option>
                                     <option>Conference 4628A 1761035</option>
                                 </select>
                             </div>
@@ -38,15 +37,15 @@
                             <div class="col-sm-9">
                                 <select class="form-control" id="ddllightScene">
                                     <option selected>--Select Scene--</option>
-                                    <option value="Off">Off</option>
-                                    <option value="Full$20On">Full On</option>
-                                    <option value="High">High</option>
-                                    <option value="Medium">Medium</option>
-                                    <option value="Low">Low</option>
-                                    <option value="High$201">High 1</option>
-                                    <option value="VTC">VTC</option>
-                                    <option value="Low$201">Low 1</option>
-                                    <option value="Unknown">Unknown</option>
+                                    <option value="1">Off</option>
+                                    <option value="2">Full On</option>
+                                    <option value="3">High</option>
+                                    <option value="4">Medium</option>
+                                    <option value="5">Low</option>
+                                    <option value="6">High 1</option>
+                                    <option value="7">VTC</option>
+                                    <option value="8">Low 1</option>
+                                    <option value="9">Unknown</option>
                                 </select>
                             </div>
                         </div>
@@ -67,7 +66,7 @@
                     </form>
                 </div>
                 <div class="col-sm-4">
-                    <i class="fa fa-10x fa-lightbulb-o" aria-hidden="false"></i>
+                    <i class="fa fa-10x fa-lightbulb-o" id="lightLevel" aria-hidden="false"></i>
                 </div>
                 <div class="col-sm-4">
                     <button type="button" class="btn-sm btnsearchstyle" id="btnRefresh">
