disable unknown type selection changes

--- a/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
+++ b/bacnet-lutron-demo/BacnetLutronWeb/Views/BacNetLutron/BacNetLutronUi.cshtml
@@ -45,7 +45,7 @@
                                     <option value="6">High 1</option>
                                     <option value="7">VTC</option>
                                     <option value="8">Low 1</option>
-                                    <option value="9">Unknown</option>
+                                    <option value="9" disabled>Unknown</option>
                                 </select>
                             </div>
                         </div>
